# ikuko

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  io.rs  main.rs
