[package]
name = "ikuko"
version = "0.3.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Simple static file server"
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.arg]
version = "0.4"

[dependencies.c-main]
version = "1"

[dependencies.http-fs]
version = "2"
features = ["tokio", "hyper"]

[dependencies.hyper]
version = "1"
features = ["http1", "server"]

[dependencies.tokio]
version = "1"
features = ["rt", "net"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
